[package]
name = "aws-multipart-upload"
version = "0.1.0-beta.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quasi-coherent/aws-multipart-upload"
readme = "README.md"
description = "Futures for AWS S3 multipart uploads"
edition = "2024"
authors = ["Daniel Donohue <d.michael.donohue@gmail.com>"]
keywords = ["aws", "s3", "multipart", "upload"]

[features]
default = ["full"]
full = ["csv", "arrow"]

arrow = ["dep:arrow", "dep:parquet"]
csv = ["dep:csv"]

[dependencies]
arrow = { version = "56.2.0", optional = true }
aws-config = { version = "1.8.8", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.108.0", features = ["rt-tokio"] }
bytes = "1.10.1"
csv = { version = "1.3.1", optional = true }
futures = "0.3.31"
serde = "1.0"
serde_json = "1.0"
multipart-write = "0.1.0-beta.3"
parquet = { version = "56.2.0", optional = true }
pin-project = "1.1.10"
thiserror = "2.0.14"
tracing = { version = "0.1.40", features = ["log"] }