[package]
name = "aws-multipart-upload"
version = "0.1.0-beta.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quasi-coherent/aws-multipart-upload"
readme = "README.md"
description = "SDK plugin for S3 multipart uploads"
edition = "2024"
authors = ["Daniel Donohue <d.michael.donohue@gmail.com>"]
keywords = ["aws", "s3", "multipart", "upload"]
rust-version = "1.88.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
csv = ["dep:csv"]
parquet = ["dep:arrow", "dep:parquet"]
tracing = ["dep:tracing"]

[dependencies]
arrow = { version = "56.2.0", optional = true }
aws-config = { version = "1.8.8", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.108.0", features = ["rt-tokio"] }
bytes = "1.10.1"
csv = { version = "1.3.1", optional = true }
futures = "0.3.31"
serde = "1.0"
serde_json = "1.0"
multipart-write = "0.1.0-rc4"
parquet = { version = "56.2.0", optional = true }
pin-project = "1.1.10"
thiserror = "2.0.14"
tracing = { version = "0.1.41", optional = true }
uuid = { version = "1.18.1", features = ["v7"] }

[dev-dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
tokio = { version = "1.47.0", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[[example]]
name = "main"
path = "examples/main.rs"
required-features = ["csv", "tracing"]