[package]
name = "aws-multipart-upload"
version = "0.1.0-rc2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quasi-coherent/aws-multipart-upload"
readme = "README.md"
description = "SDK plugin for S3 multipart uploads"
edition = "2024"
authors = ["Daniel Donohue <d.michael.donohue@gmail.com>"]
keywords = ["aws", "s3", "multipart", "upload"]
rust-version = "1.88.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
all = ["csv", "parquet", "tracing"]
parquet = ["dep:parquet", "arrow"]

[dependencies]
arrow = { version = "56.2.0", optional = true }
aws-config = { version = "1.8.8", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.115.0"
bytes = "1.10.1"
bytesize = "2.3.0"
csv = { version = "1.3.1", optional = true }
futures = "0.3.31"
serde = "1.0"
serde_json = "1.0"
multipart-write = "0.1.0-rc5"
parquet = { version = "56.2.0", optional = true }
pin-project = "1.1.10"
thiserror = "2.0.14"
tracing = { version = "0.1.41", optional = true }

[dev-dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[[example]]
name = "jsonlines"
required-features = ["tracing"]

[[example]]
name = "csv"
required-features = ["csv", "tracing"]